# py2graphdb

./: .gitignore  LICENSE  Py2GraphDB.yml  README.md  pyproject.toml  setup.py
config/: config.py  import_config_path.txt  local_config.yml  unit_test_config.yml
manifestations/: PyTove.yml  Tove DC Part I.docx  Tove DC Part III Spatial.docx  Tove DC Part IIa Time.docx  Tove DC Part IIb Constrained Time.docx  Tove DC Part IV Change.docx  Tove DC Part V Resource.docx  Tove DC Part VI Shelter.docx  activity.py  cactivity.py  change.py  cityagent.py  constraint.py  ctime.py  index.html  otime.py  resource.py  shelter.py  spatialloc.py  utils.py
manifestations/config/: import_config_path.txt  local_config.yml  local_config_test.yml
src/: main.py
src/Models/: graph_node.py
src/ontology/: extra.py
src/ontology/ontology_cache/: compass.owl  gml.owl  sf.owl
src/py2graphdb/: main.py
src/py2graphdb/Models/: graph_node.py
src/py2graphdb/config/: config.py  import_config_path.txt
src/py2graphdb/ontology/: extra.py  namespaces.py  operators.py
src/py2graphdb/ontology/ontology_cache/: cids.owl  cids.ttl  geosparql.owl
src/py2graphdb/utils/: _model_getters_setters_deleters.py  db_utils.py  init_db.py  misc_lib.py  sparql_client.py
src/utils/: _model_getters_setters_deleters.py  db_utils.py  misc_lib.py
tests/: test_impact_model.py  test_sparql_dict.py  test_sparql_dict_operators.py  test_unit_test_node0_performance.py  test_unit_test_node1.py  test_unit_test_node2.py  test_unit_test_node3.py  test_unit_test_path.py  unit_test_ks.py
